@@ -9,7 +9,7 @@ public class PageNotFoundException extends NotFoundException {
   }
 
   public PageNotFoundException(final long identifier) {
-    super(String.format("A Page identified by %d cannot be found", identifier));
+    super("A Page identified by %d cannot be found".formatted(identifier));
   }
 
 }
